common/redis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
  name: redis-ingress
  namespace: vault
spec:
  rules:
  - host: ejnmeal-redis.k8s.pyeong.tech
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ejnmeal-redis-master
              port:
                number: 6379
